# pycardgame

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  examples.py  pyproject.toml  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage-report.yml  publish-pages.yml  python-lint-and-test.yml  python-package.yml  python-publish.yml
app/: README.md
app/pycardgame/: __init__.py
app/pycardgame/src/: base.py  base.pyi  game.py  game.pyi  presets.py  presets.pyi  presets.pyi.old  types.py
app/pycardgame/test/: __init__.py  test_base.py  test_game.py
app/pycardgame/test/base/: test_card.py  test_deck.py  test_game.py  test_player.py
app/pycardgame/test/presets/: test_poker.py  test_skat.py
app/pycardgame/tests/base/: test_card.py  test_deck.py  test_game.py  test_player.py
app/pycardgame/tests/presets/: test_poker.py  test_uno.py
app/pycardgame/tests/presets/uno/: test_cards.py  test_deck.py  test_game.py
docs/source/: conf.py  coverage.rst  index.rst
docs/source/usage/: installation.rst  quickstart.rst
tmp/: _uno_testing.py
